# voice-filters

./: .gitmodules  CMakeLists.txt  README.md  generate.bat  release.bat
.github/workflows/: build.yaml
src/: main.cpp  main.h
src/filters/MuteChannel/: MuteChannel.cpp  MuteChannel.h
src/filters/RadioEffect/: RadioEffect.cpp  RadioEffect.h
src/interfaces/: IAudioFilter.h
src/lib/DSPFilters/: Bessel.cpp  Biquad.cpp  Butterworth.cpp  Cascade.cpp  ChebyshevI.cpp  ChebyshevII.cpp  Custom.cpp  Design.cpp  Documentation.cpp  Elliptic.cpp  Filter.cpp  Legendre.cpp  Param.cpp  PoleFilter.cpp  RBJ.cpp  RootFinder.cpp  State.cpp
src/lib/DSPFilters/headers/: Cascade.h  Common.h  Dsp.h  Filter.h  SmoothedFilter.h  Utilities.h
test/: bass.txt  cmd-mute-channel.bat  cmd-radio-effect.bat
